[package]
name = "gemini_moderator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.1"